[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/gmtk - asset teste 3.png" type="Texture" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Assets/gmtk - asset teste 2.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.5708
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 3 )

[node name="BulletTypePreview" type="Sprite" parent="."]
modulate = Color( 1, 0, 0, 1 )
rotation = 1.5708
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="TimerToShoot" type="Timer" parent="."]
wait_time = 0.2

[connection signal="timeout" from="TimerToShoot" to="." method="_on_TimerToShoot_timeout"]
